# RocqiPath

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
src/rocqipath/: __init__.py  api.py  cli.py  config.py  exceptions.py  logger.py  slide.py  utils.py
src/rocqipath/analysis/: __init__.py  cell_counting.py
src/rocqipath/extraction/: __init__.py  _extraction_engine.py  core_extraction.py  patch_extraction.py  tissue_extraction.py
src/rocqipath/registration/: __init__.py  alignment.py  core.py
src/rocqipath/stain/: __init__.py  stain_normalization.py
src/rocqipath/visualization/: __init__.py  ihc_overlay.py  visualization.py  wsi_compare.py
src/roqcipath/: __init__.py  api.py  cli.py  config.py  exceptions.py  logger.py  magnification.py  output.py  slide.py  utils.py
src/roqcipath/analysis/: cell_counting.py
src/roqcipath/extraction/: __init__.py  _extraction_engine.py  core_extraction.py  patch_extraction.py  tissue_extraction.py
src/roqcipath/registration/: __init__.py  alignment.py  core.py
src/roqcipath/stain/: __init__.py  stain_normalization.py
src/roqcipath/visualization/: __init__.py  ihc_overlay.py  visualization.py  wsi_compare.py
tests/: conftest.py  test_api_grid_map.py  test_magnification.py  test_orb_streaming.py  test_output.py  test_synthetic_integration.py  test_tissue_area.py  test_utils.py
