[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocqipath"
version = "1.2.0"
description = "A Python library for whole-slide image (WSI) processing and analysis in computational pathology."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "All Rights Reserved" }
authors = [
    { name = "Darshil Gajjar" },
]
keywords = [
    "whole-slide-imaging",
    "computational-pathology",
    "histopathology",
    "image-registration",
    "stain-normalization",
    "digital-pathology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# ---------------------------------------------------------------------------
# Core dependencies — logging and magnification/output utilities.
# ---------------------------------------------------------------------------
dependencies = [
    "numpy>=1.23",
    "rich>=13.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
# `pip install rocqipath[extraction]`
# TMA core extraction + whole-slide tissue extraction pipelines.
extraction = [
    "opencv-python-headless>=4.7",
    "pyvips>=2.2",
    "openslide-python>=1.3",
    "pillow>=10.0",
    "tqdm>=4.65",
]

# `pip install rocqipath[valis]`
# Low-level registration engine (WSIRegistrar / ValisConfig) and the
# alignment pipeline built on top of it.
valis = [
    "opencv-python-headless>=4.7",
    "pyvips>=2.2",
    "openslide-python>=1.3",
    "pillow>=10.0",
    "tqdm>=4.65",
    "valis-wsi>=1.0",
    "matplotlib>=3.7",
]

# `pip install rocqipath[wsi]`
# Alias of `valis` kept for backward-compatible install hints referenced
# elsewhere in the codebase (e.g. `pip install rocqipath[wsi,valis]`).
wsi = ["opencv-python-headless>=4.7", "pyvips>=2.2", "openslide-python>=1.3", "pillow>=10.0", "tqdm>=4.65", "valis-wsi>=1.0", "matplotlib>=3.7"]

# `pip install rocqipath[stain]`
# Stain normalization (Reinhard / Macenko / Vahadane).
stain = [
    "opencv-python-headless>=4.7",
    "tiatoolbox>=1.5",
]

# `pip install rocqipath[cellcount]`
# DAB / IHC positive-cell counting utilities (any biomarker).
cellcount = [
    "opencv-python-headless>=4.7",
    "openslide-python>=1.3",
    "scikit-image>=0.21",
    "tqdm>=4.65",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

# `pip install rocqipath[viz]`
# Grid-map / patch-pair visualisation and WSI comparison figures.
viz = [
    "opencv-python-headless>=4.7",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

# `pip install rocqipath[all]`
# Every optional pipeline and engine.
all = [
    "opencv-python-headless>=4.7", "pyvips>=2.2", "openslide-python>=1.3",
    "pillow>=10.0", "tqdm>=4.65", "valis-wsi>=1.0", "tiatoolbox>=1.5",
    "scikit-image>=0.21", "matplotlib>=3.7", "openpyxl>=3.1",
]

# `pip install rocqipath[dev]`
# Testing, linting, and formatting tools for contributors.
dev = [
    "pillow>=10.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.7",
]

[project.scripts]
rocqipath = "rocqipath.cli:main"
RocqiPath_create_dataset = "rocqipath.planning.entrypoints:create_dataset_entry"
RocqiPath_verify_dataset = "rocqipath.planning.entrypoints:verify_dataset_entry"
RocqiPath_extract_fingerprint = "rocqipath.planning.entrypoints:extract_fingerprint_entry"
RocqiPath_plan_experiment = "rocqipath.planning.entrypoints:plan_experiment_entry"
RocqiPath_preprocess = "rocqipath.planning.entrypoints:preprocess_entry"
RocqiPath_plan_and_preprocess = "rocqipath.planning.entrypoints:plan_and_preprocess_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rocqipath = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Compact single-line branches are retained in older pipeline implementations.
ignore = ["E701", "E702"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
