[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocqipath"
dynamic = ["version"]
description = "A Python library for whole-slide image (WSI) processing and analysis in computational pathology."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "All Rights Reserved" }
authors = [
    { name = "Darshil Gajjar" },
]
keywords = [
    "whole-slide-imaging",
    "computational-pathology",
    "histopathology",
    "image-registration",
    "stain-normalization",
    "digital-pathology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# ---------------------------------------------------------------------------
# Core dependencies — required by the installed CLI and shared logger.
# ---------------------------------------------------------------------------
dependencies = [
    "rich>=13.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
# `pip install rocqipath[extraction]`
# TMA core extraction + whole-slide tissue extraction pipelines.
extraction = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "pyvips>=2.2",
    "openslide-python>=1.3",
    "pillow>=10.0",
    "tqdm>=4.65",
]

# `pip install rocqipath[valis]`
# Low-level registration engine (WSIRegistrar / ValisConfig) and the
# alignment pipeline built on top of it.
valis = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "pyvips>=2.2",
    "openslide-python>=1.3",
    "pillow>=10.0",
    "tqdm>=4.65",
    "valis-wsi>=1.2",
    "matplotlib>=3.7",
]

# `pip install rocqipath[stain]`
# Stain normalization (Reinhard / Macenko / Vahadane).
stain = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "tiatoolbox>=1.5",
]

# `pip install rocqipath[cellcount]`
# DAB / IHC positive-cell counting utilities (any biomarker).
cellcount = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "openslide-python>=1.3",
    "scikit-image>=0.21",
    "tqdm>=4.65",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

# `pip install rocqipath[viz]`
# Grid-map / patch-pair visualisation and WSI comparison figures.
viz = [
    "numpy>=1.23",
    "opencv-python-headless>=4.7",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

[project.scripts]
rocqipath = "rocqipath.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rocqipath = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "rocqipath.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Compact single-line branches are retained in older pipeline implementations.
ignore = ["E701", "E702"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
